# molnex

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml  zensical.toml
.claude/: NOTES.md
.claude/agents/: ml-expert.md  mn-architect.md  mn-documenter.md  mn-optimizer.md  mn-scientist.md  mn-tester.md  molnex-architect.md  molnex-documenter.md  molnex-optimizer.md  molnex-scientist.md  molnex-tester.md  molzoo-auditor.md
.claude/notes/: README.md  architecture.md  notes.md  open-questions.md
.claude/skills/: molzoo-spec-log.md  molzoo-spec-lookup.md  molzoo-spec-new.md  molzoo-spec.md
.claude/skills/mn-arch/: SKILL.md
.claude/skills/mn-debug/: SKILL.md
.claude/skills/mn-docs/: SKILL.md
.claude/skills/mn-fix/: SKILL.md
.claude/skills/mn-impl/: SKILL.md
.claude/skills/mn-litrev/: SKILL.md
.claude/skills/mn-ml/: SKILL.md
.claude/skills/mn-note/: SKILL.md
.claude/skills/mn-perf/: SKILL.md
.claude/skills/mn-refactor/: SKILL.md
.claude/skills/mn-review/: SKILL.md
.claude/skills/mn-science/: SKILL.md
.claude/skills/mn-ship/: SKILL.md
.claude/skills/mn-spec/: SKILL.md
.claude/skills/mn-test/: SKILL.md
.claude/skills/molnex-arch/: SKILL.md
.claude/skills/molnex-docs/: SKILL.md
.claude/skills/molnex-impl/: SKILL.md
.claude/skills/molnex-litrev/: SKILL.md
.claude/skills/molnex-perf/: SKILL.md
.claude/skills/molnex-review/: SKILL.md
.claude/skills/molnex-spec/: SKILL.md
.claude/skills/molnex-test/: SKILL.md
.claude/skills/molzoo-spec/: SKILL.md  template.md
.claude/specs/: INDEX.md  aot-inductor-export.acceptance.md  aot-inductor-export.md  core-interface-stabilization.md  interface-aot-runner.acceptance.md  interface-aot-runner.md  molrec-labeled-dataset.acceptance.md  molrec-labeled-dataset.md  multipole-layer.md  pinet-quantization-thermal-noise-01-aggregate.acceptance.md  pinet-quantization-thermal-noise-01-aggregate.md  pinet-quantization-thermal-noise-02-md-driver.acceptance.md  pinet-quantization-thermal-noise-02-md-driver.md  pinet-quantization-thermal-noise-03-diagnostics.acceptance.md  pinet-quantization-thermal-noise-03-diagnostics.md  pinet-quantization-thermal-noise-04-verdict.acceptance.md  pinet-quantization-thermal-noise-04-verdict.md  sonata-04-docs.acceptance.md  sonata-04-docs.md  sonata-05-bench.acceptance.md  sonata-05-bench.md  sonata-05-data.acceptance.md  sonata-05-data.md  sonata-05-hpc.acceptance.md  sonata-05-hpc.md  sonata-05-md.acceptance.md  sonata-05-md.md  sonata-05-obs.acceptance.md  sonata-05-obs.md  sonata-05-run.acceptance.md  sonata-05-run.md  sonata-05-train.acceptance.md  sonata-05-train.md  tensordict-cleanup.acceptance.md  tensordict-cleanup.md  torch-pme-migration.acceptance.md  torch-pme-migration.md
.devcontainer/cpu/: devcontainer.json
.devcontainer/cuda/: devcontainer.json
.github/workflows/: ci.yml
benchmarks/: conftest.py  run_allegro_bench.py
benchmarks/bm_molpot/: __init__.py  bm_sonata.py
benchmarks/bm_molrep/bm_interaction/: bm_element.py  bm_product.py  bm_radial.py
benchmarks/bm_molzoo/: bm_allegro.py
benchmarks/molix/nn/: mlp.py
benchmarks/molpot/: sonata.py
benchmarks/molrep/embedding/: angular.py  cutoff.py  radial.py
benchmarks/molrep/interaction/: aggregation.py  contraction.py
benchmarks/molrep/readout/: product.py
benchmarks/molzoo/: bm_allegro.py  bm_mace.py  bm_pinet.py
docs/: index.md  installation.md  tensordict_schema.md
docs/api/: index.md  molix.md  molpot.md  molrep.md  molzoo.md
docs/molix/: index.md
docs/molix/explanation/: batch-schema.md  execution-model.md
docs/molix/tutorials/: quick-start.md  train-a-graph-model.md
docs/molix/user-guide/: data-loading.md  data-modules.md  data.md  hooks.md  trainer.md
docs/molpot/: index.md
docs/molpot/explanation/: potential-composition.md
docs/molpot/tutorials/: build-a-potential.md
docs/molpot/user-guide/: components.md  gradients.md
docs/molrep/: index.md
docs/molrep/explanation/: representation-learning.md
docs/molrep/tutorials/: build-an-encoder.md
docs/molrep/user-guide/: embeddings.md  encoders.md
docs/molzoo/: index.md
docs/molzoo/specs/: allegro.md
docs/molzoo/tutorials/: index.md
docs/molzoo/user-guide/: allegro.md
docs/specs/: core-interface-stabilization.md
interface/: CMakeLists.txt
interface/include/molnex/interface/: model_runner.h
interface/src/: model_runner.cpp
interface/tests/: CMakeLists.txt  generate_fixtures.py  test_model_runner.cpp
src/molix/: __init__.py  compile.py  config.py  export.py  logging.py
src/molix/F/: locality.py  pot.py
src/molix/cli/: __init__.py  __main__.py  doctor.py
src/molix/core/: hook.py  hooks.py  metrics.py  state.py  trainer.py
src/molix/data/: README.md  __init__.py  cache.py  collate.py  datamodule.py  dataset.py  pipeline.py  source.py  task.py  types.py
src/molix/datasets/: __init__.py  _data_acquisition.md  _extxyz.py  molrec.py  qm9.py  revmd17.py  threebpa.py  water_les.py
src/molix/hooks/: __init__.py  _utils.py  checkpoint.py  early_stop.py  gpu.py  journal.py  profiler.py  progress.py  scalar.py  tensorboard.py  training.py
src/molix/io/: __init__.py  reader.py  writer.py
src/molix/nn/: locality.py  mlp.py  scatter.py
src/molix/op/: CMakeLists.txt
src/molix/op/src/neighbors/: get_neighbor_pairs.cu
src/molix/profiler/: __init__.py  _utils.py  dataloader.py  mock.py  module.py  task.py
src/molix/recorder/: __init__.py  reader.py  schema.py  zarr_store.py
src/molpot/: __init__.py  pinet_dipole.py  pinet_polarizability.py  pinet_potential.py
src/molrep/: __init__.py
src/molzoo/: README.md  __init__.py  allegro.py  mace.py  pinet.py  sonata.py
tests/: symmetry_helpers.py
tests/_oracles/: __init__.py  screened_coulomb.py
tests/test_molix/: test_export.py  test_logging.py
tests/test_molzoo/: test_allegro.py  test_allegro_parity.py  test_mace.py  test_mace_encoder.py  test_pinet.py  test_symmetry.py
work/sonata_bulk_water/: README.md  submit.py  train.py
workspace/: project.json  workspace.json
workspace/catalog/: index.json
(+270 files in other folders)
